# roboagent

./: .env.example  README.md  pyproject.toml
docs/: agent_skill.md  roboagent.md
docs/modules/: README.md  agent.md  config.md  skill.md  tool.md
roboagent/agent/: agent.py
roboagent/config/: __init__.py  model_config.py
roboagent/model/: __init__.py  errors.py  factory.py  registry.py
roboagent/model/providers/: __init__.py  base.py  deepseek.py  openai.py  tongyi.py
roboagent/skill/: __init__.py  errors.py  loader.py  manager.py  registry.py  schema.py  skill.py
roboagent/tool/: __init__.py  errors.py  manager.py  registry.py  resolver.py  schema.py  tool.py
tests/: __init__.py
tests/model/: __init__.py  test_config_and_factory.py  test_provider_config.py  test_registry.py
tests/skill/: test_loader.py  test_manager.py  test_models.py  test_registry.py
tests/tool/: _helpers.py  test_manager.py  test_registry.py  test_resolver.py  test_schema.py  test_tool.py
